# svsm-attest

./: .gitignore  Cargo.toml
proxy/: Cargo.toml
proxy/src/: main.rs
svsm-attest/: Cargo.toml
svsm-attest/src/: error.rs  lib.rs  proxy.rs
